--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/api": "^2.2.1",
+    "@aws-amplify/auth": "^3.2.8",
+    "@aws-amplify/core": "^3.2.8",
     "@aws-amplify/pubsub": "^2.1.9",
-    "@material-ui/core": "^4.9.8",
+    "@aws-amplify/ui-react": "^0.2.7",
+    "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.4.1",
+    "aws-amplify": "^3.0.12",
+    "aws-amplify-react": "^4.1.11",
+    "bootstrap": "^4.5.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
-    "react-hamburger-menu": "^1.1.1",
+    "react-hamburger-menu": "^1.2.1",
     "react-player": "^1.15.3",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1"
   },
