--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/api": "^2.2.1",
-    "@aws-amplify/auth": "^3.2.8",
-    "@aws-amplify/core": "^3.2.8",
-    "@aws-amplify/pubsub": "^2.1.9",
     "@aws-amplify/ui-react": "^0.2.8",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
@@ -14,12 +10,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "aws-amplify": "^3.0.17",
-    "aws-amplify-react": "^4.1.11",
     "bootstrap": "^4.5.0",
+    "draft-js": "^0.11.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
