--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,16 +1,15 @@
 {
 	"api": {
-		"jonweb": {
+		"jonwebts": {
 			"service": "AppSync",
 			"providerPlugin": "awscloudformation",
 			"output": {
 				"authConfig": {
 					"additionalAuthenticationProviders": [],
 					"defaultAuthentication": {
-						"authenticationType": "API_KEY",
-						"apiKeyConfig": {
-							"description": "jonwebprod",
-							"apiKeyExpirationDays": 7
+						"authenticationType": "AMAZON_COGNITO_USER_POOLS",
+						"userPoolConfig": {
+							"userPoolId": "authjonweb44e73b7f"
 						}
 					}
 				}
