--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
+    "react-google-recaptcha": "^2.1.0",
     "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@types/draft-js": "^0.10.43",
     "@types/react-draft-wysiwyg": "^1.13.0",
+    "@types/react-google-recaptcha": "^2.1.0",
     "@types/react-hamburger-menu": "0.0.3",
     "@types/react-router-dom": "^5.1.5",
     "@types/reactstrap": "^8.5.0"
