--- a/amplify/backend/function/jonweb82b3da72/src/package.json
+++ b/amplify/backend/function/jonweb82b3da72/src/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
+    "nodemailer": "^6.4.10",
     "sanitize-html": "^1.27.1"
   }
 }
