--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.5.0",
     "draft-js": "^0.11.6",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.10",
     "react": "^16.13.1",
     "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
