--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "aws-amplify": "^3.0.17",
     "bootstrap": "^4.5.0",
     "draft-js": "^0.11.6",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.10",
     "react": "^16.13.1",
@@ -52,6 +54,8 @@
   },
   "devDependencies": {
     "@types/draft-js": "^0.10.43",
+    "@types/draftjs-to-html": "^0.8.0",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/react-draft-wysiwyg": "^1.13.0",
     "@types/react-google-recaptcha": "^2.1.0",
     "@types/react-hamburger-menu": "0.0.3",
