--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "draftjs-to-html": "^0.9.1",
     "html-to-draftjs": "^1.5.0",
     "node-sass": "^4.14.1",
-    "nodemailer": "^6.4.10",
     "react": "^16.13.1",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
@@ -27,7 +26,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "reactstrap": "^8.5.1",
     "typescript": "^3.9.7"
   },
@@ -56,10 +55,13 @@
     "@types/draft-js": "^0.10.43",
     "@types/draftjs-to-html": "^0.8.0",
     "@types/html-to-draftjs": "^1.4.0",
+    "@types/node": "^14.0.27",
     "@types/react-draft-wysiwyg": "^1.13.0",
     "@types/react-google-recaptcha": "^2.1.0",
     "@types/react-hamburger-menu": "0.0.3",
     "@types/react-router-dom": "^5.1.5",
-    "@types/reactstrap": "^8.5.0"
+    "@types/reactstrap": "^8.5.0",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.0.8"
   }
 }
