--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/smoothscroll-polyfill": "^0.3.1",
     "aws-amplify": "^3.0.23",
     "bootstrap": "^4.5.2",
     "draft-js": "^0.11.7",
@@ -28,6 +29,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "reactstrap": "^8.5.1",
+    "smoothscroll-polyfill": "^0.4.4",
     "typescript": "^3.9.7"
   },
   "scripts": {
