--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/smoothscroll-polyfill": "^0.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "prettier": "2.1.2",
     "typescript": "^4.0.3"
   }
 }
