--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/reactstrap": "^8.5.0",
     "@types/smoothscroll-polyfill": "^0.3.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.0.8",
     "prettier": "2.1.2",
