--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,9 +2,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ prod ]
+    branches: [ main, beta ]
   pull_request:
-    branches: [ prod ]
+    branches: [ main ]
   schedule:
     - cron: '15 13 * * 5'
 
