--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-device-detect": "^1.13.1",
     "react-dom": "^17.0.1",
     "react-google-recaptcha": "^2.1.0",
-    "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "reactstrap": "^8.5.1",
@@ -41,7 +40,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
@@ -63,6 +62,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "history": "^5.0.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
