--- a/.github/workflows/node-js-ci.yml
+++ b/.github/workflows/node-js-ci.yml
@@ -19,4 +19,4 @@ jobs:
       - run: npm test -- --coverage
       - uses: codecov/codecov-action@v1
         with:
-          files: ./coverage/lcov-report/index.html
+          files: ./coverage/coverage-final.json
