--- a/package.json
+++ b/package.json
@@ -38,6 +38,14 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.tsx",
+      "!src/components/ScrollToTop.tsx",
+      "!src/App.tsx",
+      "!src/index.tsx"
+    ]
+  },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^11.2.3",
