--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@aws-amplify/ui-react": "^0.2.34",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@sentry/react": "^5.30.0",
     "aws-amplify": "^3.3.14",
     "bootstrap": "^4.5.2",
     "node-sass": "^4.14.1",
