--- a/.github/workflows/node-js-ci.yml
+++ b/.github/workflows/node-js-ci.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: '14.x'
       - run: npm ci
+      - run: npm run lint
       - run: npm test -- --coverage
       - uses: codecov/codecov-action@v1
         with:
