--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "start": "PORT=3003 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .tsx,.ts"
   },
   "browserslist": {
     "production": [
