contact form unit tests

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "collectCoverageFrom": [
       "src/**/*.tsx",
       "!src/components/ScrollToTop.tsx",
+      "!src/pages/Lectures.tsx",
       "!src/App.tsx",
       "!src/index.tsx"
     ]
