--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "@aws-amplify/api": "^3.2.17",
     "@aws-amplify/auth": "^3.4.17",
     "@aws-amplify/ui-react": "^0.2.34",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
     "@sentry/react": "^5.30.0",
     "aws-amplify": "^3.3.14",
     "bootstrap": "^4.5.2",
@@ -69,6 +67,7 @@
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
