--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@aws-amplify/ui-react": "^0.2.34",
     "@sentry/react": "^5.30.0",
     "aws-amplify": "^3.3.14",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^5.0.0-beta1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-device-detect": "^1.13.1",
