--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "@aws-amplify/ui-react": "^0.2.34",
     "@sentry/react": "^5.30.0",
     "aws-amplify": "^3.3.14",
-    "bootstrap": "^5.0.0-beta1",
+    "bootstrap": "^4.6.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
-    "react-device-detect": "^1.13.1",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
-    "reactstrap": "^8.5.1",
+    "reactstrap": "^8.9.0",
     "smoothscroll-polyfill": "^0.4.4"
   },
   "scripts": {
@@ -50,19 +50,15 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^26.0.9",
-    "@types/node": "^14.0.27",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-google-recaptcha": "^2.1.0",
-    "@types/react-hamburger-menu": "0.0.3",
     "@types/react-router-dom": "^5.1.5",
     "@types/reactstrap": "^8.5.0",
     "@types/smoothscroll-polyfill": "^0.3.1",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
-    "eslint": "^7.15.0",
+    "eslint": "^7.18.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.15.0",
