--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^11.2.3",
+    "@types/jest": "^26.0.20",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-google-recaptcha": "^2.1.0",
