--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,6 @@
     "@aws-amplify/api": "^3.2.17",
     "@sentry/react": "^5.30.0",
     "bootstrap": "^4.6.0",
-    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
@@ -14,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "reactstrap": "^8.9.0",
+    "sass": "^1.32.5",
     "smoothscroll-polyfill": "^0.4.4"
   },
   "scripts": {
