contact form Lambda: lockfile v2

--- a/lecture-tracker/amplify/.config/project-config.json
+++ b/lecture-tracker/amplify/.config/project-config.json
@@ -2,7 +2,7 @@
   "providers": [
     "awscloudformation"
   ],
-  "projectName": "jonweb",
+  "projectName": "lecture-tracker",
   "version": "3.0",
   "frontend": "javascript",
   "javascript": {
