--- a/lecture-tracker/package.json
+++ b/lecture-tracker/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/api": "^3.2.17",
-    "@aws-amplify/auth": "^3.4.17",
-    "@aws-amplify/ui-react": "^0.2.34",
+    "@aws-amplify/api": "^3.2.23",
+    "@aws-amplify/auth": "^3.4.23",
+    "@aws-amplify/ui-react": "^1.0.2",
+    "aws-amplify": "^3.3.20",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
