--- a/lecture-tracker/package.json
+++ b/lecture-tracker/package.json
@@ -10,7 +10,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "reactstrap": "^8.9.0"
   },
   "scripts": {
