--- a/web/amplify/backend/backend-config.json
+++ b/web/amplify/backend/backend-config.json
@@ -33,7 +33,7 @@
             "authenticationType": "API_KEY",
             "apiKeyConfig": {
               "apiKeyExpirationDays": 365,
-              "description": "jonweb"
+              "description": "jon"
             }
           },
           "additionalAuthenticationProviders": [
@@ -52,7 +52,8 @@
     "contactform3": {
       "build": true,
       "providerPlugin": "awscloudformation",
-      "service": "Lambda"
+      "service": "Lambda",
+      "dependsOn": []
     },
     "lectureReminder7": {
       "build": true,
