--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,8 +3,14 @@ name: 'CodeQL'
 on:
   push:
     branches: [main]
+    paths:
+      - '**.js'
+      - '**.tsx?'
   pull_request:
     branches: [main]
+    paths:
+      - '**.js'
+      - '**.tsx?'
   schedule:
     - cron: '15 13 * * 5'
 
