--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -21,6 +21,16 @@
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "react/require-default-props": 0,
     "no-plusplus": [2, { "allowForLoopAfterthoughts": true }],
-    "jsx-a11y/label-has-associated-control": 0
+    "jsx-a11y/label-has-associated-control": 0,
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ]
   }
 }
