--- a/lecture-tracker/.gitignore
+++ b/lecture-tracker/.gitignore
@@ -26,7 +26,7 @@ yarn-error.log*
 
 amplify/
 
-#amplify
+#amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
 amplify/logs
@@ -40,7 +40,10 @@ node_modules/
 aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
+amplifyconfiguration.dart
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
+**.sample
+#amplify-do-not-edit-end
